# cpp-cmake-template-ad

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  QUICKSTART.md  README.md  cmake.options
cmake/: CompilerWarnings.cmake  Coverage.cmake  Hardening.cmake  IPO.cmake
include/PROJECT_NAME_LOWER/: example.h
scripts/: rename_project.sh
src/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt  test_example.cpp
